# MHFU_Kitechen_Helper

./: .gitignore  Bonus.py  Controller.py  Ingredients.py  Main.py  Model.py  Pipfile  README.md  View.py  __build__.py  app.py  build.py  config.properties  pyproject.toml
app/: bonus.py  controller.py  ingredients.py  io_manager.py  model.py  view.py
lang/: eng.json
